--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -1,6 +1,6 @@
 jobs:
-  dependencies:
-    runs-on: ubuntu-slim
+  check:
+    runs-on: ubuntu-latest
     steps:
       - continue-on-error: true
         id: createGithubAppToken
@@ -15,17 +15,9 @@ jobs:
       - uses: cachix/install-nix-action@v31
         with:
           github_access_token: ${{ steps.createGithubAppToken.outputs.token || secrets.GITHUB_TOKEN }}
-      - uses: shikanime-studio/actions/update@v7
-        with:
-          email: operator6o@shikanime.studio
-          fullname: Operator 6O
-          github-token: ${{ steps.createGithubAppToken.outputs.token || secrets.GITHUB_TOKEN }}
-          gpg-passphrase: ${{ secrets.GPG_PASSPHRASE }}
-          gpg-private-key: ${{ secrets.GPG_PRIVATE_KEY }}
-          sign-commits: true
-          username: operator6o
-  stale:
-    runs-on: ubuntu-slim
+      - run: nix flake check --accept-flake-config --no-pure-eval
+  test:
+    runs-on: ubuntu-latest
     steps:
       - continue-on-error: true
         id: createGithubAppToken
@@ -33,15 +25,17 @@ jobs:
         with:
           app-id: ${{ vars.OPERATOR_APP_ID }}
           private-key: ${{ secrets.OPERATOR_PRIVATE_KEY }}
-      - uses: actions/stale@v10
+      - uses: actions/checkout@v6
         with:
-          days-before-close: 14
-          days-before-stale: 30
-          repo-token: ${{ steps.createGithubAppToken.outputs.token || secrets.GITHUB_TOKEN }}
-          stale-issue-label: stale
-          stale-pr-label: stale
-name: Update
+          fetch-depth: 0
+          token: ${{ steps.createGithubAppToken.outputs.token || secrets.GITHUB_TOKEN }}
+      - uses: cachix/install-nix-action@v31
+        with:
+          github_access_token: ${{ steps.createGithubAppToken.outputs.token || secrets.GITHUB_TOKEN }}
+      - run: nix develop --accept-flake-config --no-pure-eval --command devenv test
+name: Integration
 'on':
-  schedule:
-    - cron: 0 4 * * 0
-  workflow_dispatch: null
+  pull_request:
+    branches:
+      - main
+      - gh/*/*/base
