--- a/.github/workflows/cleanup.yaml
+++ b/.github/workflows/cleanup.yaml
@@ -1,8 +1,9 @@
 jobs:
   cleanup:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-slim
     steps:
-      - id: createGithubAppToken
+      - continue-on-error: true
+        id: createGithubAppToken
         uses: actions/create-github-app-token@v2
         with:
           app-id: ${{ vars.OPERATOR_APP_ID }}
@@ -10,17 +11,15 @@ jobs:
       - uses: actions/checkout@v6
         with:
           fetch-depth: 0
-          token: ${{ steps.createGithubAppToken.outputs.token }}
+          token: ${{ steps.createGithubAppToken.outputs.token || secrets.GITHUB_TOKEN }}
       - env:
           BASE_REF: ${{ github.base_ref }}
-          GITHUB_TOKEN: ${{ steps.createGithubAppToken.outputs.token }}
           HEAD_REF: ${{ github.head_ref }}
           REPO: ${{ github.repository }}
         if: '!(startsWith(github.head_ref, ''gh/'') && endsWith(github.head_ref, ''/head''))'
         run: git push origin --delete "$HEAD_REF" || true
       - env:
           BASE_REF: ${{ github.base_ref }}
-          GITHUB_TOKEN: ${{ steps.createGithubAppToken.outputs.token }}
           HEAD_REF: ${{ github.head_ref }}
           REPO: ${{ github.repository }}
         if: startsWith(github.head_ref, 'gh/') && endsWith(github.head_ref, '/head')
